--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,13 +1,63 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+margin: 0;
+}
+nav{
+  background-color: #34495e;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* product css */
+.cart-item {
+  display: inline-flex;
+  margin: 20px 10px;
+  border: 1px solid gray;
+  border-radius: 20px;
+  max-width: 800px;
+}
+.cart-item .right-block {
+  padding: 0 20px;
+}
+.left-block{
+  margin: 5px;
+  padding: 5px;
+}
+.left-block img{
+  width: 100%;
+  max-width: 200px;
+  height: auto;
+}
+.right-block{
+  text-align: start;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-top: 35px;
+  padding-top: 5px;
+}
+.cart-item-actions {
+  margin-top: 20px;
+}
+.action-icons {
+  height: 20px;
+  width: 20px;
+}
+.cart-item-action button{
+  margin-right: 10px;
+}
+.cart-item-action button:hover{
+  background-color: none;
+}
+
+/* cart count */
+.count{
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  color: white;
+  border-radius: 50%;
+}
+
+
+.action-icons:hover {
+  cursor: pointer;
+  color: white;
 }
