--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -14,11 +14,13 @@ nav{
   max-width: 800px;
 }
 .cart-item .right-block {
-  padding: 0 20px;
+  padding: 0 20px 10px 20px;
 }
 .left-block{
+  display: flex;
   margin: 5px;
   padding: 5px;
+  justify-content: center;
 }
 .left-block img{
   width: 100%;
@@ -32,6 +34,7 @@ nav{
   justify-content: flex-start;
   margin-top: 35px;
   padding-top: 5px;
+  padding-bottom: 10px;
 }
 .cart-item-actions {
   margin-top: 20px;
@@ -60,4 +63,18 @@ nav{
 .action-icons:hover {
   cursor: pointer;
   color: white;
+}
+
+/* add product form  */
+
+.new-form{
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+}
+form{
+  border: 1px solid gray;
+  border-radius: 10px;
+  padding: 25px;
+  max-width: 800px;
 }
