--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -5,13 +5,18 @@ nav{
   background-color: #34495e;
 }
 
+.navbar-brand{
+  font-family: 'Borel', cursive;
+}
+
 /* product css */
 .cart-item {
   display: inline-flex;
-  margin: 20px 10px;
+  margin: 20px 0;
   border: 1px solid gray;
   border-radius: 20px;
-  max-width: 800px;
+  width: 100%;
+  max-width: 700px;
 }
 .cart-item .right-block {
   padding: 0 20px 10px 20px;
@@ -25,7 +30,7 @@ nav{
 .left-block img{
   width: 100%;
   max-width: 200px;
-  height: auto;
+  height: inherit;
 }
 .right-block{
   text-align: start;
@@ -45,6 +50,8 @@ nav{
 }
 .cart-item-action button{
   margin-right: 10px;
+  margin-top: 5px;
+  width: fit-content;
 }
 .cart-item-action button:hover{
   background-color: none;
@@ -76,5 +83,6 @@ form{
   border: 1px solid gray;
   border-radius: 10px;
   padding: 25px;
+  width: 100%;
   max-width: 800px;
 }
