--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -14,6 +14,7 @@ nav{
   display: inline-flex;
   margin: 20px 0;
   border: 1px solid gray;
+  background-color: aliceblue;
   border-radius: 20px;
   width: 100%;
   max-width: 700px;
@@ -69,7 +70,7 @@ nav{
 
 .action-icons:hover {
   cursor: pointer;
-  color: white;
+  fill: white;
 }
 
 /* add product form  */
